[gd_scene load_steps=8 format=3 uid="uid://bej8vpb1jhhx2"]

[ext_resource type="Script" uid="uid://bipyux0256s2i" path="res://scripts/enemy.gd" id="1_4rmfi"]
[ext_resource type="Texture2D" uid="uid://do6ganr7jex17" path="res://assets/Hull_02.png" id="1_1873v"]
[ext_resource type="Texture2D" uid="uid://bwxlt82d1yuv4" path="res://assets/Gun_01.png" id="2_4rmfi"]
[ext_resource type="Texture2D" uid="uid://slciwei0a3qs" path="res://assets/Track_2_A.png" id="4_2aymp"]
[ext_resource type="Texture2D" uid="uid://bhfp5ao2u0exg" path="res://assets/Track_2_B.png" id="5_nnpkk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tuluh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_2aymp")
}, {
"duration": 1.0,
"texture": ExtResource("5_nnpkk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urepc"]
size = Vector2(96, 128)

[node name="enemy" type="Area2D" groups=["enemy"]]
show_behind_parent = true
rotation = 3.14159
script = ExtResource("1_4rmfi")

[node name="hull" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_1873v")
metadata/_edit_lock_ = true

[node name="weapon" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4rmfi")
metadata/_edit_lock_ = true

[node name="l_wheel" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(-28.0171, -8.13007e-05)
scale = Vector2(0.949414, 0.55)
sprite_frames = SubResource("SpriteFrames_tuluh")
metadata/_edit_lock_ = true

[node name="r_wheel" type="AnimatedSprite2D" parent="."]
show_behind_parent = true
position = Vector2(28.1764, 8.15392e-05)
scale = Vector2(0.942, 0.55)
sprite_frames = SubResource("SpriteFrames_tuluh")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_urepc")
metadata/_edit_lock_ = true

[node name="enemy_shell_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="enemy_shell_timer" to="." method="_on_enemy_shell_timer_timeout"]
